infra/kubernetes/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: bank.local
      http:
        paths:
          - path: /customers
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
